--- a/Problem_Set_4_Code.ipynb
+++ b/Problem_Set_4_Code.ipynb
@@ -218,8 +218,8 @@
     "\tbest_ll = logLikelihood(G,z_t,c)\n",
     "\tbest_move = None\n",
     "\n",
-    "\t# Iterate over the n-t unfrozen nodes (f_i == 0) and c-1 possible single-node moves for each node (excluding nodes that are the only node in their group)\n",
-    "\tvalid_nodes = [node for node in G if f[node] == 0 and sum([1 for node2 in G if z_t[node2] == z_t[node]]) > 1]\n",
+    "\t# Iterate over the n-t unfrozen nodes (f_i == 0) and c-1 possible single-node moves for each node\n",
+    "\tvalid_nodes = [node for node in G if f[node] == 0]\n",
     "\n",
     "\tfor node in valid_nodes:\n",
     "\t\tfor group in [g for g in list(range(1,c+1)) if g != z_t[node]]:\n",
